Customer orders that are not yet shipped will have status "not shippied" on customer order history page

--- a/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
@@ -63,7 +63,15 @@
                         @order.OrderStatus
                     </td>
                     <td>
-                        @order.ShippingDate
+                        @if (order.ShippingDate == DateTime.UnixEpoch)
+                        {
+                        <p>Not shipped</p>
+                        }
+                        else
+                        {
+                            @order.ShippingDate
+                        }
+
                     </td>
                     <td>
                         @order.OrderTotal SEK
