Clicking order hisory now redirects to correct page

--- a/Deckel-Shop/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Deckel-Shop/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -19,7 +19,7 @@
             <a class="nav-link " asp-controller="Profile" asp-action="Index">Profile</a>
         </li>*@
         <li class="nav-item">
-            <a class="nav-link" asp-controller="Profile" asp-action="CustomerOrderHistory">Order History</a>
+            <a class="nav-link" asp-controller="Profile" asp-action="Index">Order History</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" href="~/Identity/Account/Manage/">Manage account</a>
