Changed font for admin navigation

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -6,7 +6,7 @@
 
 <script src="~/js/Admin.js"></script>
 
-<ul class="nav nav-tabs nav-tabs">
+<ul class="nav nav-tabs nav-tabs AdminNav">
     <li class="nav-item">
         <a class="nav-link" asp- asp-action="Administrator">Pending Orders</a>
     </li>
