--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -8,7 +8,7 @@
     <script src="~/js/Admin.js"></script>
 
 @*nav bar*@
-<ul class="nav nav-tabs nav-tabs">
+<ul class="nav nav-tabs nav-tabs AdminNav">
     <li class="nav-item ">
         <a class="nav-link active" asp- asp-action="Administrator">Pending Orders</a>
     </li>
