--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Database.Models.Product>;
 @*nav bar*@
-<ul class="nav nav-tabs nav-tabs">
+<ul class="nav nav-tabs nav-tabs AdminNav">
     <li class="nav-item ">
         <a class="nav-link" asp- asp-action="Administrator">Pending Orders</a>
     </li>
