Fixed dropdown button double click

--- a/Deckel-Shop/Views/Cart/Checkout.cshtml
+++ b/Deckel-Shop/Views/Cart/Checkout.cshtml
@@ -10,7 +10,9 @@
 </style>
 @model Deckel_Shop.Models.CheckoutViewModel
 
+@section Scripts{
     <script src="~/js/Checkout.js"></script>
+}
 
 @using (Html.BeginForm())
 
