--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<Database.Models.Product>;
 @*nav bar*@
+
+<script src="~/js/Admin.js"></script>
+
 <ul class="nav nav-tabs nav-tabs AdminNav">
     <li class="nav-item ">
         <a class="nav-link" asp- asp-action="Administrator">Pending Orders</a>
