--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -363,6 +363,7 @@ footer a:hover{
     border-radius: 5px;
     overflow: hidden;
     z-index: 1;
+    margin-bottom: 20px;
     transition: all .3s ease 0s
 }
 
