--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -53,30 +53,36 @@
                         {
                             if (cart == null)
                             {
-                                <button class="btn btn" value="@p.Id" name="id">
-                                    <a class="add-to-cart">ADD TO CART</a>
+                                <button class="btn add-to-cart" value="@p.Id" name="id">
+                                    ADD TO CART
+
                                 </button>
                             }
                             else if (cart != null && !cart.Products.Exists(cartItem => cartItem.Id == p.Id))
                             {
-                                <button class="btn btn" value="@p.Id" name="id">
-                                    <a class="add-to-cart">ADD TO CART</a>
+                                <button class="btn add-to-cart" value="@p.Id" name="id">
+                                    ADD TO CART
+
                                 </button>
                             }
                             else if (p.Amount > cart.Products.FirstOrDefault(cartItem => cartItem.Id == p.Id).Amount)
                             {
-                                <button class="btn btn" value="@p.Id" name="id">
-                                    <a class="add-to-cart">ADD TO CART</a>
+                                <button class="btn add-to-cart" value="@p.Id" name="id">
+                                  ADD TO CART
                                 </button>
                             }
                             else
                             {
-                                <label class="add-to-cart">OUT OF STOCK</label>
+                                <button class="btn add-to-cart" value="@p.Id" name="id" disabled>
+                                    OUT OF STOCK
+                                </button>
                             }
                         }
                         else
                         {
-                            <label class="add-to-cart">OUT OF STOCK</label>
+                            <button class="btn add-to-cart" value="@p.Id" name="id" disabled>
+                               OUT OF STOCK
+                            </button>
                         }
                     </form>
                     @*<input class="btn btn-primary" type="submit" value="ADD TO CART" id="AddToCartBtn" onclick="AddToCart(@p.Id)" />*@
