--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                             {
                                 <span class="badge bg-light rounded-pill">@cart.Products.Count()</span>
                             }
-                            <i class="fas fa-shopping-cart cartman" style=" font-size: 36px; color: #e9cf97;" data-type="floating"></i>
+                            <i class="fas fa-shopping-cart cartman" style="font-size: 36px; color: #c4a970;" data-type="floating"></i>
                             <span class="clearfix d-none d-sm-inline-block"></span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
