fixed null exception when editing product info

--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -321,8 +321,8 @@
                                 <!-- Upload image input-->
                                 <div class=" input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
                                     <label id="upload-label1" for="upload1" class="text-muted">Choose file</label>
-                                    <input id="upload1" type="file" onchange="readURL1(this);" class="form-control border-0 text-muted" disabled />
-                                    <input id="uploadFile1" name="ImgName" value="" type="text" class="form-control border-0 " disabled />
+                                    <input id="upload1"  type="file" onchange="readURL1(this);" class="form-control border-0 text-muted" disabled />
+                                    <input id="uploadFile1" name="ImgName"  value="" type="text" class="form-control border-0 " disabled />
                                 </div>
                             </div>
                         </div>
@@ -331,7 +331,7 @@
                             <div class="col-md-10 mx-auto">
                                 <div class=" input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
                                     <label id="upload-label2" for="upload2" class="text-muted">Choose file</label>
-                                    <input value="" id="upload2" type="file" onchange="readURL2(this);" class="form-control border-0 " disabled>
+                                    <input id="upload2"  type="file" onchange="readURL2(this);" class="form-control border-0 " disabled>
                                     <input id="uploadFile2" name="ImgName2" value="" type="text" class="form-control border-0 " disabled />
                                 </div>
                             </div>
