--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -5,7 +5,7 @@
 }
 @model IEnumerable<Database.Models.Order>
 
-    <script src="~/js/Admin.js"></script>
+<script src="~/js/Admin.js"></script>
 
 @*nav bar*@
 <ul class="nav nav-tabs nav-tabs AdminNav">
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-   
+
 </div>
 
 @*line break*@
@@ -86,40 +86,50 @@
                 {
                     @foreach (var item in Model)
                     {
-                <tr>
-                    <th scope="row">@Html.DisplayFor(modelItem => item.OrderId)</th>
+                        <tr>
+                            <th scope="row">@Html.DisplayFor(modelItem => item.OrderId)</th>
 
-                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                    <td>@Html.DisplayFor(modelItem => item.ShippingDate)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Customer.FirstName) @Html.DisplayFor(modelItem => item.Customer.LastName)</td>
-                    @if (item.OrderStatus == "Delivered")
-                    {
-                        <td style="color:forestgreen">
-                            @item.OrderStatus
-                        </td>
-                    }
-                    else if (item.OrderStatus == "Cancelled")
-                    {
-                        <td style="color:red">
-                            @item.OrderStatus
-                        </td>
-                    }
-                    else
-                    {
-                        <td>
-                            @item.OrderStatus
-                        </td>
-                    }
-                    @*<td>@Html.DisplayFor(modelItem => item.OrderStatus)</td>*@
-                    <td>@Html.DisplayFor(modelItem => item.OrderTotal)</td>
-                    <td>
-                        <span data-toggle="tooltip" data-placement="bottom" title="info">
-                            <button type="button" onclick="GetModalInfo(@item.OrderId, 'orderDetails')" id="infoModalBtn-@item.OrderId" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
-                                <i class="fas fa-info-circle"></i>
-                            </button>
-                        </span>
-                    </td>
-                </tr>
+                            <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                            <td>
+
+                                @if (item.ShippingDate == DateTime.UnixEpoch)
+                                {
+                                    <p>Not shipped</p>
+                                }
+                                else
+                                {
+                                    @item.ShippingDate
+                                }
+                            </td>
+                            <td>@Html.DisplayFor(modelItem => item.Customer.FirstName) @Html.DisplayFor(modelItem => item.Customer.LastName)</td>
+                            @if (item.OrderStatus == "Delivered")
+                            {
+                                <td style="color:forestgreen">
+                                    @item.OrderStatus
+                                </td>
+                            }
+                            else if (item.OrderStatus == "Cancelled")
+                            {
+                                <td style="color:red">
+                                    @item.OrderStatus
+                                </td>
+                            }
+                            else
+                            {
+                                <td>
+                                    @item.OrderStatus
+                                </td>
+                            }
+                            @*<td>@Html.DisplayFor(modelItem => item.OrderStatus)</td>*@
+                            <td>@Html.DisplayFor(modelItem => item.OrderTotal)</td>
+                            <td>
+                                <span data-toggle="tooltip" data-placement="bottom" title="info">
+                                    <button type="button" onclick="GetModalInfo(@item.OrderId, 'orderDetails')" id="infoModalBtn-@item.OrderId" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                                        <i class="fas fa-info-circle"></i>
+                                    </button>
+                                </span>
+                            </td>
+                        </tr>
                     }
                 }
 
