--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -80,7 +80,18 @@
                         @order.OrderDate
                     </td>
                     <td>
-                        @order.OrderStatus
+                        @if (order.OrderStatus == "Delivered")
+                        {
+                            <p style="color: forestgreen">@order.OrderStatus</p>
+                        }
+                        else if (order.OrderStatus == "Cancelled")
+                        {
+                            <p style="color: red">@order.OrderStatus</p>
+                        }
+                        else
+                        {
+                            <p>@order.OrderStatus</p>
+                        }
                     </td>
                     <td>
                         @order.ShippingDate
