--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Database.Models.Order>
 @{
-    ViewData["Title"] = "Customer#01 Order History";
+    ViewData["Title"] = "Customers' Order History";
 }
 
 <script src="~/js/Admin.js"></script>
