--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -203,7 +203,7 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputPrice">Status</label>
-                            <input name="Status" value="" type="text" class="form-control" id="ProductStatus">
+                            <input name="Status" value="Available" type="text" class="form-control" id="ProductStatus">
                         </div>
                     </div>
                     <div class=" form-group col-md-12 ">
@@ -249,7 +249,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <input type="submit" value="save" class="btn btn-primary" />
+                    <input type="submit" value="Save" class="btn btn-primary" />
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                 </div>
                 @*end of form*@
@@ -381,7 +381,7 @@
             </div>
             <div class="modal-footer">
                 <form asp-action="RemoveProduct">
-                    <button name="id" id="DeleteBtn" value="" class="btn btn-danger">JAJAMEEEEN</button>
+                    <button name="id" id="DeleteBtn" value="" class="btn btn-danger">OK</button>
                 </form>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
@@ -400,7 +400,7 @@
                     </div>
                     <div class="modal-footer">
 
-                        <button name="id" id="AddBackToStockBtn" value="" class="btn btn-danger">JAJAMEEEEN</button>
+                        <button name="id" id="AddBackToStockBtn" value="" class="btn btn-danger">Save</button>
 
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                 </div>
