--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-2">
+    @*<div class="col-sm-2">
         <div class="d-flex">
             <div class="dropdown mr-1">
                 <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
 </div>
 
