comment out filter in customer order history

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -19,20 +19,20 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-2">
+    @*<div class="col-sm-2">
         <div class="d-flex">
             <div class="dropdown mr-1">
                 <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
                     Status
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                    <a class="dropdown-item" value="1" href="#">Invoiced</a>
+                    <a class="dropdown-item" value="1" href="#">Pending</a>
                     <a class="dropdown-item" value="2" href="#">Delivered</a>
                     <a class="dropdown-item" value="3" href="#">Cancelled</a>
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
     
 </div>
 
