Removed Unessesary Code/unused code

--- a/Deckel-Shop/Views/Home/Faq.cshtml
+++ b/Deckel-Shop/Views/Home/Faq.cshtml
@@ -6,7 +6,7 @@
        
     
     
-    <h2>frequently asked questions</h2>
+    <h2>Frequently asked questions</h2>
 
 
     <button type="button" class="collapsible">Delivery time</button>
