--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -267,9 +267,9 @@
         <form asp-action="EditProduct" id="stockForm">
             <div class="DeckelModal modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Product info</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-                    <span aria-hidden="true">&times;</span>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
 
                 <div class="modal-body">
@@ -371,11 +371,11 @@
 <div class="modal fade" id="exampleModal-delete" tabindex="-1" aria-labelledby="exampleModal-deleteLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="DeckelModal modal-content">
-            @*<div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                </div>*@
+                </div>
             <div class="modal-body">
                 Delete Product?
             </div>
