fixed bug in cart

--- a/Deckel-Shop/Views/Cart/SavedCart.cshtml
+++ b/Deckel-Shop/Views/Cart/SavedCart.cshtml
@@ -114,7 +114,7 @@
             <form asp-action="ChangeQuantity">
                 <div class="modal-body">
                     <label for="inputAmount">Amount</label>
-                    <input name="amount" type="number" class="form-control" id="inputAmount">
+                    <input name="amount" type="number" min="1" class="form-control" id="inputAmount">
                 </div>
                 <div class="modal-footer">
                     <button name="id" id="AddBackToStockBtn" value="" class="btn btn-danger">Yes</button>
