small fix: order status -> ORDER STATUS in admin views

--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -72,7 +72,7 @@
                     <th scope="col">ORDER#</th>
                     <th scope="col">ORDER DATE</th>
                     <th scope="col">CUSTOMER NAME</th>
-                    <th scope="col">Order Status</th>
+                    <th scope="col">ORDER STATUS</th>
                     <th scope="col">ORDER TOTAL</th>
                     <th scope="col"></th>
                 </tr>
